Refactoring: some variables moved to constants, InputDataParser has been renamed, created enum with all possible operations